WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313369
[Site Isolation] http/wpt/fetch/fetch-metadata-for-sandbox-iframes.html fails
https://bugs.webkit.org/show_bug.cgi?id=313369
Summary
[Site Isolation] http/wpt/fetch/fetch-metadata-for-sandbox-iframes.html fails
Ryosuke Niwa
Reported
2026-04-26 16:43:38 PDT
http/wpt/fetch/fetch-metadata-for-sandbox-iframes.html fails with --site-isolation.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-04-26 16:50:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63648
EWS
Comment 2
2026-04-28 21:59:13 PDT
Committed
312260@main
(e5e7e08e6537): <
https://commits.webkit.org/312260@main
> Reviewed commits have been landed. Closing PR #63648 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-28 22:00:15 PDT
<
rdar://problem/175821186
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug